--- a/src/pc/index.html
+++ b/src/pc/index.html
@@ -217,6 +217,6 @@
   <div class="overlay" id="overlay" style="display: none;"></div>
 
   <script src="download-manager.js"></script>
-  <script src="renderer.js"></script>
+  <script src="dist/renderer.js"></script>
 </body>
 </html>
