--- a/src/pc/index.html
+++ b/src/pc/index.html
@@ -8,6 +8,22 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css">
 </head>
 <body>
+  <!-- 启动动画 -->
+  <div class="splash-screen" id="splash-screen">
+    <div class="splash-content">
+      <div class="splash-logo">
+        <img src="./images/icon.png" alt="Logo" class="splash-icon">
+        <div class="splash-title">万物应用商店</div>
+      </div>
+      <div class="splash-loader">
+        <div class="loader-ring">
+          <div class="loader-ring-progress"></div>
+        </div>
+      </div>
+      <div class="splash-subtitle">纯净、安全、无广告的Windows应用下载工具</div>
+    </div>
+  </div>
+  
   <div class="app-container" id="app-container">
     <!-- 标题栏 -->
     <div class="title-bar">
@@ -22,10 +38,13 @@
       <div class="title-bar-center">
         <div class="title-bar-search">
           <div class="search-wrapper">
-            <input type="text" class="search-input" id="search-input" placeholder="搜索应用、游戏和工具...">
             <div class="search-icon">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
             </div>
+            <input type="text" class="search-input" id="search-input" placeholder="搜索应用、游戏和工具...">
+            <button class="clear-btn" id="clear-btn" type="button" title="清除">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+            </button>
           </div>
           <!-- 热门软件弹窗 -->
           <div class="hot-apps-container hidden" id="hot-apps-container">
@@ -101,7 +120,6 @@
 
             <!-- 已安装软件页面 -->
             <div class="page-item" id="installed-page">
-              <div class="page-title">✅ 本机已安装软件列表 (真实读取)</div>
               <div id="software-list-container" class="software-list">
                 <div class="loading-text">正在扫描本机已安装软件，请稍候...</div>
               </div>
@@ -124,8 +142,6 @@
 
             <div class="page-item" id="settings-page">
               <div class="settings-page">
-                <div class="page-title">通用设置</div>
-                <div class="settings-subtitle">调整应用外观和基础行为</div>
                 <div class="settings-grid">
                   <div class="settings-card">
                     <div class="settings-card-title">外观主题</div>
@@ -186,7 +202,6 @@
   <!-- 下载管理器浮动窗口 -->
   <div id="download-manager-window" class="floating-window">
     <div class="floating-window-header">
-      <h3>下载管理</h3>
     </div>
     <div id="dm-list" class="download-list">
       <!-- 下载项目将在这里动态添加 -->
